[project]
name = "agnoguard"
version = "0.1.0"
description = "Advanced guardrail suite for LLM agents"
authors = [
    { name = "Aayush Gid", email = "aayushgid598@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "regex",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
